--- a/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model System.Web.Management.SqlExecutionException
+
+@{
     Layout = null;
 }
 
@@ -10,7 +12,9 @@
     <title>Success!</title>
 </head>
 <body>
-<h1>Operation executed successfully!</h1>
+<h1>Execute of operation failed!</h1>
+
+<h2>@Model.Message</h2>
 
 @Html.ActionLink("Go to homepage", "Index")
 </body>
