--- a/CompanyDatabaseProcessing/Views/Home/Index.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
    
     @Html.ActionLink("Add item","AddItemForm")
     @Html.ActionLink("Delete item", "DeleteItemForm")
+    @Html.ActionLink("Find item", "FindItemForm")
     <table border="1">
         <tr class="header">
             <td><p>First_name</p></td>
