--- a/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
@@ -12,10 +12,10 @@
     <title>Success!</title>
 </head>
 <body>
-<h1>Execute of operation failed!</h1>
+<h1>Невозможно выполнить операцию!</h1>
 
-<h2>@Model.Message</h2>
+<h2>Сообщение: @Model.Message</h2>
 
-@Html.ActionLink("Go to homepage", "Index")
+@Html.ActionLink("Вернуться на домашнюю страницу", "Index")
 </body>
 </html>
