--- a/CompanyDatabaseProcessing/Views/Home/OperationSuccessful.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/OperationSuccessful.cshtml
@@ -12,17 +12,17 @@
     <title>Success!</title>
 </head>
 <body>
-<h1>Operation executed successfully!</h1>
+<h1>Операция выполнена успешно!!</h1>
     @if (Model != null)
     {
-        <h3>Results:</h3>
+        <h3>Результаты по вашему запросу:</h3>
         <table border="1">
             <tr class="header">
-                <td><p>First_name</p></td>
-                <td><p>Second_name</p></td>
-                <td><p>last_name</p></td>
-                <td><p>Department</p></td>
-                <td><p>Post</p></td>
+                <td><p>Имя</p></td>
+                <td><p>Фамилия</p></td>
+                <td><p>Отчество</p></td>
+                <td><p>Отдел</p></td>
+                <td><p>Пост</p></td>
             </tr>
             @foreach (var person in Model)
             {
@@ -36,6 +36,6 @@
             }
         </table>
     }
-@Html.ActionLink("Go to homepage", "Index")
+@Html.ActionLink("Вернуться на домашнюю страницу", "Index")
 </body>
 </html>
