--- a/CompanyDatabaseProcessing/Views/Home/ChangeItemForm.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/ChangeItemForm.cshtml
@@ -1,6 +1,7 @@
-﻿@model IEnumerable<CompanyDatabaseProcessing.Models.ChangedData>
+﻿@model CompanyDatabaseProcessing.Models.ChangedData
 
 @{
+    ViewBag.Title = "ChangeItemForm";
     Layout = null;
 }
 
@@ -9,28 +10,90 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>ChangeItemForm</title>
+    <title>Заменить запись</title>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <style>
+        .btn a {
+            color: white;
+            text-decoration: none;
+        }
+
+        body {
+            background-color: white;
+        }
+    </style>
 </head>
 <body>
-<h4> Введите параметры для замены сотруднка: </h4>
-@using (Html.BeginForm())
-{
-    <p><h3>Введите заменяемого:</h3> </p>
-    <p>Имя: @Html.TextBox("first_name_del")</p>
-    <p>Фамилия: @Html.TextBox("second_name_del")</p>
-    <p>Отчество: @Html.TextBox("last_name_del")</p>
-    <p>Отдел: @Html.TextBox("dep_del")</p>
-    <p>Пост: @Html.TextBox("post_del")</p>
-
-    <p><h3>Введите на кого заменить:</h3> </p>
-    <p>Имя: @Html.TextBox("first_name_add")</p>
-    <p>Фамилия: @Html.TextBox("second_name_add")</p>
-    <p>Отчество: @Html.TextBox("last_name_add")</p>
-    <p>Отдел: @Html.TextBox("dep_add")</p>
-    <p>Пост: @Html.TextBox("post_add")</p>
-    
-    <input type="submit" value="Заменить данные" />
-}
-        
+    <div class="panel-warning">
+        <div class="panel-heading text-center">
+            <h4>Введите параметры замены: </h4>
+        </div>
+        <div class="panel-body">
+            @using (Html.BeginForm())
+            {
+                <div class="container">
+                    <div class="row">
+                        <div class="form-group col-xs-6">
+                            <div class="text-center"><h5><strong>Кого заменить:</strong></h5></div>
+                            <label>Имя:</label>
+                            @Html.TextBoxFor(x => x.first_name_del, new {@class = "form-control"})
+                        </div>
+                        <div class="form-group col-xs-6 col-xs-offset-6">
+                            <div class="text-center"><h5><strong>На кого заменить:</strong></h5></div>
+                            <label>Имя:</label>
+                            @Html.TextBoxFor(x => x.first_name_add, new {@class = "form-control"})
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-6">
+                            <label>Фамилия:</label>
+                            @Html.TextBoxFor(x => x.second_name_del, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-xs-6 col-xs-offset-6">
+                            <label>Фамилия:</label>
+                            @Html.TextBoxFor(x => x.second_name_add, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-6">
+                            <label>Отчество:</label>
+                            @Html.TextBoxFor(x => x.last_name_del, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-xs-6 col-xs-offset-6">
+                            <label>Отчество:</label>
+                            @Html.TextBoxFor(x => x.last_name_add, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-6">
+                            <label>Отдел:</label>
+                            @Html.TextBoxFor(x => x.dep_del, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-xs-6 col-xs-offset-6">
+                            <label>Отдел:</label>
+                            @Html.TextBoxFor(x => x.dep_add, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-xs-6">
+                            <label>Пост:</label>
+                            @Html.TextBoxFor(x => x.post_del, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-xs-6 col-xs-offset-6">
+                            <label>Пост:</label>
+                            @Html.TextBoxFor(x => x.post_add, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-lg-offset-3 col-lg-6">
+                            <div class="text-center">
+                                <input type="submit" value="Заменить" class="btn btn-warning btn-lg" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>        
 </body>
 </html>
