--- a/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/OperationFailed.cshtml
@@ -1,7 +1,7 @@
 ﻿@model System.Web.Management.SqlExecutionException
 
 @{
-    ViewBag.Title = "UnSuccessOperation";
+    ViewBag.Title = "UnsuccessOperation";
     Layout = null;
 }
 
