--- a/CompanyDatabaseProcessing/Views/Home/ChangeItemForm.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/ChangeItemForm.cshtml
@@ -11,7 +11,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Заменить запись</title>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="~/Content/Styles.css" />
     <style>
         .btn a {
             color: white;
@@ -33,13 +34,18 @@
             {
                 <div class="container">
                     <div class="row">
+                        <div class="col-xs-12 col-sm-offset-3 col-sm-7 col-lg-offset-4 col-lg-6"><strong>@Html.ValidationSummary()</strong></div>
+                    </div>
+                    <div class="row">
                         <div class="form-group col-xs-6">
-                            <div class="text-center"><h5><strong>Кого заменить:</strong></h5></div>
+                            <div class="text-center"><h5><strong>Кого заменить:</strong></h5>
+                            </div>
                             <label>Имя:</label>
                             @Html.TextBoxFor(x => x.first_name_del, new {@class = "form-control"})
                         </div>
                         <div class="form-group col-xs-6 col-xs-offset-6">
-                            <div class="text-center"><h5><strong>На кого заменить:</strong></h5></div>
+                            <div class="text-center"><h5><strong>На кого заменить:</strong></h5>
+                            </div>
                             <label>Имя:</label>
                             @Html.TextBoxFor(x => x.first_name_add, new {@class = "form-control"})
                         </div>
@@ -47,47 +53,47 @@
                     <div class="row">
                         <div class="form-group col-xs-6">
                             <label>Фамилия:</label>
-                            @Html.TextBoxFor(x => x.second_name_del, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.second_name_del, new {@class = "form-control"})
                         </div>
                         <div class="form-group col-xs-6 col-xs-offset-6">
                             <label>Фамилия:</label>
-                            @Html.TextBoxFor(x => x.second_name_add, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.second_name_add, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-xs-6">
                             <label>Отчество:</label>
-                            @Html.TextBoxFor(x => x.last_name_del, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.last_name_del, new {@class = "form-control"})
                         </div>
                         <div class="form-group col-xs-6 col-xs-offset-6">
                             <label>Отчество:</label>
-                            @Html.TextBoxFor(x => x.last_name_add, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.last_name_add, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-xs-6">
                             <label>Отдел:</label>
-                            @Html.TextBoxFor(x => x.dep_del, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.dep_del, new {@class = "form-control"})
                         </div>
                         <div class="form-group col-xs-6 col-xs-offset-6">
                             <label>Отдел:</label>
-                            @Html.TextBoxFor(x => x.dep_add, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.dep_add, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-xs-6">
                             <label>Пост:</label>
-                            @Html.TextBoxFor(x => x.post_del, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.post_del, new {@class = "form-control"})
                         </div>
                         <div class="form-group col-xs-6 col-xs-offset-6">
                             <label>Пост:</label>
-                            @Html.TextBoxFor(x => x.post_add, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.post_add, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <div class="text-center">
-                                <input type="submit" value="Заменить" class="btn btn-warning btn-lg" />
+                                <input type="submit" value="Заменить" class="btn btn-warning btn-lg"/>
                             </div>
                         </div>
                     </div>
