--- a/CompanyDatabaseProcessing/Views/Home/DeleteItemForm.cshtml
+++ b/CompanyDatabaseProcessing/Views/Home/DeleteItemForm.cshtml
@@ -11,7 +11,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Удалить запись</title>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="~/Content/Styles.css" />
     <style>
         .btn a {
             color: white;
@@ -33,39 +34,42 @@
             {
                 <div class="container">
                     <div class="row">
+                        <div class="col-xs-12 col-sm-offset-3 col-sm-7"><strong>@Html.ValidationSummary()</strong></div>
+                    </div>
+                    <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <label>Имя:</label>
-                            @Html.TextBoxFor(x => x.first_name, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.first_name, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <label>Фамилия:</label>
-                            @Html.TextBoxFor(x => x.second_name, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.second_name, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <label>Отчество:</label>
-                            @Html.TextBoxFor(x => x.last_name, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.last_name, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <label>Отдел:</label>
-                            @Html.TextBoxFor(x => x.dep, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.dep, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <label>Пост:</label>
-                            @Html.TextBoxFor(x => x.post, new { @class = "form-control" })
+                            @Html.TextBoxFor(x => x.post, new {@class = "form-control"})
                         </div>
                     </div>
                     <div class="row">
                         <div class="form-group col-lg-offset-3 col-lg-6">
                             <div class="text-center">
-                                <input type="submit" value="Удалить запись" class="btn btn-danger btn-lg" />
+                                <input type="submit" value="Удалить запись" class="btn btn-danger btn-lg"/>
                             </div>
                         </div>
                     </div>
